--- a/index.html
+++ b/index.html
@@ -1,5 +1,40 @@
 <!DOCTYPE html>
 <html>
-<title>Chloe Portfolio</title>
+<head>
+  <link href=" /insert font here/ " rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <title>Chloe Portfolio</title>
+</head>
+<body>
+    <header class="navBar">
+        <div class="inline-block" class="logo">
+            <img src="logo.png" alt="C P logo">
+            <p>Chloe Payne</p>
+            <ul>
+                <li>About Me</li>
+                <li>Résumé</li>
+            </ul>
+        </div>
+    </header>
 
+    <section class="landing">
+        <div>
+            <h1>Chloe Payne</h1>
+            <h2>UX/UI Designer</h2>
+            <p>small about me blurb here, not complete yet and not whole thing, quite limited</p>
+            <button>Download my Résumé here!</button>
+        </div>
+        <div>
+            <img src="Chloe Profile.png" alt="Girl in a jacket">
+        </div>
+    </section>
+
+    <footer class="footBar">
+        <ul>
+            <li>About Me</li>
+            <li>Résumé</li>
+            <li>Contact</li>
+        </ul>
+    </footer>
+</body>
 </html>
